--- a/TicketBoard/TicketBoard.BLL/TicketBoard.BLL.csproj
+++ b/TicketBoard/TicketBoard.BLL/TicketBoard.BLL.csproj
@@ -7,7 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Services\Abstractions" />
+      <ProjectReference Include="..\TicketBoard.DAL\TicketBoard.DAL.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="11.0.1" />
     </ItemGroup>
 
 </Project>
