--- a/TicketBoard/TicketBoard.MvcClient/TicketBoard.MvcClient.csproj
+++ b/TicketBoard/TicketBoard.MvcClient/TicketBoard.MvcClient.csproj
@@ -6,4 +6,14 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="11.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TicketBoard.BLL\TicketBoard.BLL.csproj" />
+    </ItemGroup>
+
 </Project>
