mvc + integration with bll and dal

--- a/TicketBoard/TicketBoard.MvcClient/appsettings.json
+++ b/TicketBoard/TicketBoard.MvcClient/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "ConnectionString": "for the future",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local)\\MSSQLLocalDB;Database=TicketDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
