--- a/TicketBoard/TicketBoard.MvcClient/Properties/launchSettings.json
+++ b/TicketBoard/TicketBoard.MvcClient/Properties/launchSettings.json
@@ -1,25 +1,10 @@
 ﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:37420",
-      "sslPort": 44358
-    }
-  },
   "profiles": {
     "TicketBoard.MvcClient": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7184;http://localhost:5017",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7184",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
