db connection string changed

--- a/TicketBoard/TicketBoard.MvcClient/appsettings.json
+++ b/TicketBoard/TicketBoard.MvcClient/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local)\\MSSQLLocalDB;Database=TicketDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectionString": "Server=(local)\\MSSQLLocalDB;Database=TicketDb;Trusted_Connection=True;MultipleActiveResultSets=true"
 },
   "Logging": {
     "LogLevel": {
