--- a/TicketBoard/TicketBoard.MvcClient/appsettings.json
+++ b/TicketBoard/TicketBoard.MvcClient/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "Server=(local)\\MSSQLLocalDB;Database=TicketDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-},
+    "ConnectionString": "Server=tcp:127.0.0.1,1433;Initial Catalog=TicketBoard.ApplicationDb.Configuration;User Id=sa;Password=MSSQLServerStrongPassword123!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
