changed connection string to default

--- a/TicketBoard/TicketBoard.MvcClient/appsettings.json
+++ b/TicketBoard/TicketBoard.MvcClient/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "Server=tcp:127.0.0.1,1433;Initial Catalog=TicketBoard.ApplicationDb.Configuration;User Id=sa;Password=MSSQLServerStrongPassword123!"
+    "ConnectionString": "(local)\\\\MSSQLLocalDB;Database=TicketDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
